API updated, Auth works somewhat (not in Postman)
