# src/main/resources/timesheet/api.yaml
@@ -69,7 +69,8 @@ paths:
           required: true
           description: The id of the timeBlock to retrieve
           schema:
-            type: string
+            type: integer
+            format: int64
       responses:
         200:
           description: Expected response to a valid request
@@ -208,7 +209,8 @@ paths:
           required: true
           description: The id of the user to retrieve
           schema:
-            type: string
+            type: integer
+            format: int64
       responses:
         200:
           description: Expected response to a valid request
@@ -285,17 +287,16 @@ components:
         username:
           type: string
     User:
-      type: object
-      allOf:
-        - $ref: '#/components/schemas/NewUser'
       required:
         - id
-      properties:
-        id:
-          type: integer
-          format: int64
-        lastLogin:
-          type: string
+      allOf:
+        - $ref: '#/components/schemas/NewUser'
+        - properties:
+            id:
+              type: integer
+              format: int64
+            lastLogin:
+              type: string
     Users:
       type: array
       items:
